@@ -1,3 +1,8 @@
+2009-08-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/connection_base.hxx, src/connection_base.cxx:
+ - Made cancel_query public, thanks Don Madden.
+ - Hid support for pre-PQcancel libpq versions a bit deeper.
+ - Try harder to be graceful about canceling deactivated connections.
 2009-08-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
  src/connection_base.cxx:
  - Mark statement definition as complete when varargs are added.
